Changed response data to byte arrays to support image responses